pom.xml seems to be working